fixed spacing on quote carousel

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -273,7 +273,7 @@ width: 100%;
             font-size: 24px;
             height: 100%;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr 35px;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 50px;
             grid-template-rows: 1fr 1fr 1fr;
             justify-content: center;
             align-items: center;
